<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"  
  android:padding="10dip">
  
  	<ImageView
        android:id="@+id/imageRegisterLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/logo"
        android:src="@drawable/candado" />
    
	<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/user" 
		android:textStyle="bold"
		android:textColor="#000000" />
		
	<EditText android:id="@+id/txtRegisterUser"
	    android:inputType="textNoSuggestions"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
	
	<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/password" 
		android:textStyle="bold"
		android:textColor="#000000" />
	
	<EditText android:id="@+id/txtRegisterPassword1"
		android:inputType="textPassword"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
	
	<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/password_repeit" 
		android:textStyle="bold"
		android:textColor="#000000" />
	
	<EditText android:id="@+id/txtRegisterPassword2"
		android:inputType="textPassword"
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />
	
	<TextView
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:paddingLeft="10dip" 
		android:textStyle="bold" 
		android:textColor="#FF0000" />
			
	<LinearLayout 
	    android:orientation="horizontal"
	    android:gravity="center" 
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="5dip" > 
		
	    <Button android:id="@+id/buttonRegister"
			android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@drawable/login_button_color"
            android:textStyle="bold"
            android:background="@drawable/login_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
			android:text="@string/accept" />

		<Button android:id="@+id/buttonBackToLogin"
			android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@drawable/login_button_color"
            android:textStyle="bold"
            android:background="@drawable/login_button_bg"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
			android:text="@string/backToLogin" />			
	</LinearLayout>
	
</LinearLayout>
